@@ -101,3 +101,6 @@ version 2.9.0:
 	  - Pan the viewport up/down when cylcling through elements, if the element is above/below the current viewport. 
 	* R383 -- When opening new window, set select mode by default.
 	* R384 -- FIXED: Release-critical MusicXML export bug when exporting notes in voice number > 2.
+	* R385 -- ADDED: Autobeam when inserting notes in non-first voices now works.
+	  - selectNearestMidiEvent -> getNearestMidiEvent, as it doesn't make the element actual, but only gets its pointer.
+	  
